updated pricing moddel

--- a/index.html
+++ b/index.html
@@ -480,32 +480,24 @@
           <div class="section-title">
             <h2>Pricing</h2>
             <p>
-              50% of Payment will be needed up front and the other 50% on delivery. All websites
-              have a $75/year maintenance fee if hosted by Sysmologic. All Prices are in USD. Price
-              Of Domain is not included in any package (Price of domains can start for as low as
-              $2/year).
+              50% of Payment will be needed up front and the other 50% on delivery. All Prices are
+              in USD. Their are no hidden fees,
             </p>
           </div>
 
           <div class="row">
             <div class="col-lg-4 col-md-6">
               <div class="box" data-aos="fade-up" data-aos-delay="100">
-                <h3>Basic Busniess Website</h3>
-                <h4><sup>$</sup>200</h4>
+                <h3>Basic Website</h3>
+                <h4><sup>$</sup>100</h4>
                 <ul>
-                  <li>1 Page</li>
-                  <li>Beautiful and cross platform compatibale(Works on all devices) website</li>
-                  <li>Display your products and services</li>
-                  <li>Contact form</li>
-                  <li class="na">Appointment Creation System</li>
-                  <li class="na">1 Free API integration</li>
-                  <li class="na">
-                    Personal Emails for client (jhonesmith@stylespro.com instead of
-                    jhonesmith@gmail.com)
-                  </li>
-                  <li class="na">
-                    We host your website so you dont have to deal with the hassle of hosting it
-                  </li>
+                  <li>3 Page Website</li>
+                  <li>Complete W3C Certified HTML</li>
+                  <li>100% Ownership rights</li>
+                  <li>No Monthly fee or any hidden fee</li>
+                  <li>Ready in 48 hours</li>
+                  <li>Free 1 week website support</li>
+                  <li>Get a $25 coupon on your next website</li>
                 </ul>
                 <div class="btn-wrap">
                   <a href="#" id="basic-buy" class="btn-buy">Buy Now</a>
@@ -521,21 +513,17 @@
                 style="height: 100%"
               >
                 <h3>Modern Website</h3>
-                <h4><sup>$</sup>400</h4>
+                <h4><sup>$</sup>300</h4>
                 <ul>
-                  <li>10 Pages</li>
-                  <li>Beautiful and cross platform compatibale(Works on all devices) website</li>
-                  <li>Display your products and services</li>
-                  <li>Contact form</li>
-                  <li>Appointment Creation System</li>
-                  <li>Payment system setup</li>
-                  <li>
-                    Personal Emails for client (jhonesmith@stylespro.com instead of
-                    jhonesmith@gmail.com)
-                  </li>
-                  <li>
-                    We host your website so you dont have to deal with the hassle of hosting it
-                  </li>
+                  <li>10 Page Website</li>
+                  <li>All benifts from basic Package</li>
+                  <li>Contact/Query Form</li>
+                  <li>Dedicated UI/UX designer</li>
+                  <li>Five free stock images</li>
+                  <li>Cross platform compatibale</li>
+                  <li>Free Search engine optmization</li>
+                  <li>Free 3 week website support</li>
+                  <li>Get a $50 coupon on your next website</li>
                 </ul>
                 <div class="btn-wrap">
                   <a href="#" id="modern-buy" class="btn-buy">Buy Now</a>
@@ -546,24 +534,35 @@
             <div class="col-lg-4 col-md-6 mt-4 mt-lg-0">
               <div class="box" data-aos="fade-up" data-aos-delay="300">
                 <h3>Full stack website</h3>
-                <h4><sup>$</sup>600</h4>
+                <h4><sup>$</sup>700</h4>
                 <ul>
                   <li>Unlimited Pages</li>
                   <li>Includes all benifts from other tiers</li>
-                  <li>Use SQL or NOSQL databases to update content dynamically</li>
-                  <li>5 Free API integration and Free Scope of work for project</li>
-                  <li>
-                    128 Bits Hashing on all database information to keep your busniess secure and
-                    safe
-                  </li>
-                  <li>Free Admin Panel which includes busniess analytics and staff Portal</li>
+                  <li>Dedicated graphics designer(unlimited images)</li>
+                  <li>Unlimited revisions</li>
+                  <li>Complete design, development and hosting</li>
+                  <li>Social Media Integration</li>
                   <li>Recieve source code for your website</li>
+                  <li>Free 5 week website support</li>
+                  <li>Get a $75 coupon on your next website</li>
                 </ul>
                 <div class="btn-wrap">
                   <a href="#" id="full-stack-buy" class="btn-buy">Buy Now</a>
                 </div>
               </div>
             </div>
+          </div>
+
+          <div style="padding-top: 30px">
+            <h2>Add Ons:</h2>
+            <li>Professional Email ID's: $30/per email</li>
+            <li>Google Map Integration: $50</li>
+            <li>Payment module Integration: $50</li>
+            <li>Global website search: $50</li>
+            <li>Full Shopping Cart Integration(For Ecommerece websites): $100</li>
+            <li>Appointment booking secduling system: $150</li>
+            <li>Multilingual: $150</li>
+            <li>CMS(Using Wordpress): $150</li>
           </div>
         </div>
       </section>
