--- a/index.html
+++ b/index.html
@@ -668,7 +668,7 @@
             </div>
 
             <div class="col-lg-6">
-              <form data-netlify="true" method="post" class="php-email-form">
+              <form onSubmit="submit" data-netlify="true" method="post" class="php-email-form">
                 <div class="row gy-4">
                   <div class="col-md-6">
                     <input
