--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
                   <li>Contant/Query Form</li>
                   <li>Get 1 Week of Support</li>
                 </ul>
-                <a href="#" class="btn-buy">Buy Now</a>
+                <a href="#contact" class="btn-buy">Buy Now</a>
               </div>
             </div>
 
@@ -462,7 +462,7 @@
                   <li>Free 3 week website support</li>
                   <li>1 Free API Integration</li>
                 </ul>
-                <a href="#" class="btn-buy">Buy Now</a>
+                <a href="#contact" class="btn-buy">Buy Now</a>
               </div>
             </div>
 
@@ -478,7 +478,7 @@
                   <li>Unlimited Revisions</li>
                   <li>Free 6 weeks of website support</li>
                 </ul>
-                <a href="#" class="btn-buy">Buy Now</a>
+                <a href="#contact" class="btn-buy">Buy Now</a>
               </div>
             </div>
 
@@ -493,7 +493,7 @@
                   <li>Technical support and troubleshooting as needed</li>
                   <li>Periodic backups to protect against data loss(Only Databases)</li>
                 </ul>
-                <a href="#" class="btn-buy">Buy Now</a>
+                <a href="#contact" class="btn-buy">Buy Now</a>
               </div>
             </div>
           </div>
@@ -670,7 +670,7 @@
                   <div class="info-box">
                     <i class="bi bi-geo-alt"></i>
                     <h3>Address</h3>
-                    <p>65 Times Avenue<br />Markham, Toronto</p>
+                    <p>5599 Fenwick Street<br />Halifax, Nova Scotia</p>
                   </div>
                 </div>
                 <div class="col-md-6">
@@ -838,8 +838,8 @@
             <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
               <h4>Contact Us</h4>
               <p>
-                65 Times Avenue <br />
-                Markham, Toronto<br />
+                5599 Fenwick Street <br />
+                Halifax, Nova Scotia<br />
                 Canada <br /><br />
                 <strong>Phone:</strong> 4168235930 <br />
                 <strong>Email:</strong> fasihislam@sysmologic.com<br />
