--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <li><a class="nav-link scrollto" href="#about">About</a></li>
             <li><a class="nav-link scrollto" href="#services">Services</a></li>
             <li><a class="nav-link scrollto" href="#portfolio">Portfolio</a></li>
-            <li><a class="nav-link scrollto" href="#team">Pricing</a></li>
+            <li><a class="nav-link scrollto" href="#pricing">Pricing</a></li>
 
             <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
             <li><a class="getstarted scrollto" href="#about">Get Started</a></li>
