--- a/index.html
+++ b/index.html
@@ -427,8 +427,9 @@
             <h2>Pricing</h2>
             <p>Check our Pricing</p>
             <h5>
-              We offer multiple add ons apart from the basic package please contact us to get a
-              qoute
+              In addition to the core services included in each package, a range of optional extras
+              are available at an additional cost. The services listed are the minimum included in
+              each package.
             </h5>
           </header>
 
@@ -444,6 +445,7 @@
                   <li>Complete W3C Certified HTML</li>
                   <li>Ready in 48 Hours</li>
                   <li>Contant/Query Form</li>
+
                   <li>Get 1 Week of Support</li>
                 </ul>
                 <a href="#contact" class="btn-buy">Buy Now</a>
@@ -457,10 +459,11 @@
                 <div class="price"><sup>$</sup>300</div>
 
                 <ul>
-                  <li>5 Page Website to display everything in greater detail</li>
-                  <li>Free SEO Optimization</li>
-                  <li>Free 3 week website support</li>
-                  <li>1 Free API Integration</li>
+                  <li>Upto 20 web pages</li>
+                  <li>Basic SEO</li>
+                  <li>Google Analytics integration</li>
+                  <li>Free database and API integration</li>
+                  <li>Get 2 weeks of support</li>
                 </ul>
                 <a href="#contact" class="btn-buy">Buy Now</a>
               </div>
@@ -473,10 +476,13 @@
 
                 <ul>
                   <li>Unlimited Pages</li>
-                  <li>Free Database Integration</li>
-                  <li>Free 3 API Integration</li>
-                  <li>Unlimited Revisions</li>
-                  <li>Free 6 weeks of website support</li>
+                  <li>Enhanced SEO</li>
+
+                  <li>
+                    E-commerce website development (e.g. product catalog, shopping cart, payment
+                    gateway integration)
+                  </li>
+                  <li>Free 3 weeks of website support</li>
                 </ul>
                 <a href="#contact" class="btn-buy">Buy Now</a>
               </div>
