--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
             <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="400">
               <div class="box">
                 <h3 style="color: #ff0071">Maintaince Plan</h3>
-                <div class="price"><sup>$</sup>75<span> / mo</span></div>
+                <div class="price"><sup>$</sup>25-75<span> / mo</span></div>
 
                 <ul>
                   <li>Content updates and management</li>
