--- a/index.html
+++ b/index.html
@@ -91,12 +91,9 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-6 d-flex flex-column justify-content-center">
-            <h1 data-aos="fade-up">
-              Transform Your Online Presence with Our Custom Web Development Services
-            </h1>
+            <h1 data-aos="fade-up">Expert Web Development for Small Businesses</h1>
             <h2 data-aos="fade-up" data-aos-delay="400">
-              From stunning websites to powerful web applications, we create solutions that drive
-              success for your business
+              Customized Websites Designed to Grow Your Business and Increase Online Visibility
             </h2>
             <div data-aos="fade-up" data-aos-delay="600">
               <div class="text-center text-lg-start">
@@ -274,10 +271,9 @@
 
                 <h3>Responsive and mobile-friendly design</h3>
                 <p>
-                  All Our websites are cross plaOur websites are designed to be cross-platform
-                  friendly, ensuring they will function properly on desktop computers, laptops, and
-                  mobile phones.tform friendly, meaning their will running on a desktop, laptop and
-                  mobile phone properly.
+                  Our websites are designed to be cross-platform friendly, ensuring that they will
+                  run properly on a variety of devices including desktop computers, laptops, and
+                  mobile phones.
                 </p>
               </div>
             </div>
@@ -359,8 +355,10 @@
 
                 <h3>Custom website design and development</h3>
                 <p>
-                  We offer custom websites for users who do not want to use bootstraps or any other
-                  forms of templates.
+                  In addition to our selection of pre-designed templates, we also offer the option
+                  of custom websites for those who want a more unique and personalized look. If you
+                  don't want to use a template or framework like Bootstrap, our team can work with
+                  you to create a completely custom website from scratch.
                 </p>
               </div>
             </div>
@@ -383,10 +381,9 @@
 
                 <h3>Maintenance and updates</h3>
                 <p>
-                  In addition to our selection of pre-designed templates, we also offer the option
-                  of custom websites for those who want a more unique and personalized look. If you
-                  don't want to use a template or framework like Bootstrap, our team can work with
-                  you to create a completely custom website from scratch.
+                  Keep your website running smoothly with maintenance and updates from Sysmologic.
+                  Our team will handle all necessary maintenance tasks and can add new features or
+                  functionality to your site upon request.
                 </p>
               </div>
             </div>
@@ -428,8 +425,7 @@
             <p>Check our Pricing</p>
             <h5>
               In addition to the core services included in each package, a range of optional extras
-              are available at an additional cost. The services listed are the minimum included in
-              each package.
+              are available. The services listed are the minimum included in each package.
             </h5>
           </header>
 
@@ -585,7 +581,6 @@
                   <p>Sysmogloic was great to work with, very responsive and did great work.</p>
                   <div class="profile mt-auto">
                     <h3>Davis36</h3>
-                    <h4>CEO of a finance startup</h4>
                   </div>
                 </div>
               </div>
