--- a/index.html
+++ b/index.html
@@ -117,24 +117,25 @@
               <div class="content">
                 <h1>About Us</h1>
                 <p>
-                  Sysmologic is a web development startup founded by a couple of students who are
-                  passionate about using technology to solve problems and make a positive impact in
-                  the world.
+                  Sysmologic is a website design and development company that specializes in
+                  creating professional and effective websites for small businesses. Our team of
+                  experienced designers and developers work closely with each client to understand
+                  their unique needs and goals, and then use that knowledge to create a website that
+                  not only looks great, but also effectively promotes their products or services.
                 </p>
                 <p>
-                  We have a strong background in computer science and have been building websites
-                  and web applications for clients for years. We are always learning and staying
-                  up-to-date with the latest technologies and trends in the industry.
+                  Whether you're looking for a simple brochure website or a more complex e-commerce
+                  platform, Sysmologic can help bring your business to the next level. Our
+                  affordable pricing and commitment to customer satisfaction make it easy for small
+                  businesses to get the online presence they need to succeed.
                 </p>
                 <p>
-                  We take a personalized approach to every project, working closely with our clients
-                  to understand their unique needs and goals. We pride ourselves on delivering
-                  high-quality work that meets the expectations of our clients and exceeds their
-                  expectations.
-                </p>
-                <p>
-                  We are excited to work with you and help bring your vision to life. Thank you for
-                  considering us for your web development needs.
+                  With our team of experts, we ensure that each website we create is tailored to the
+                  specific needs of the business it represents. From design to development, our goal
+                  is to create a website that not only looks great but also effectively promotes
+                  your products or services, and helps you grow your business. At Sysmologic, we are
+                  committed to providing the best service possible and making sure that our clients
+                  are completely satisfied with the end result.
                 </p>
               </div>
             </div>
@@ -411,7 +412,7 @@
         <div class="container" data-aos="fade-up">
           <header class="section-header">
             <h2>Pricing</h2>
-            <p>Check our Pricing</p>
+
             <h5>
               In addition to the core services included in each package, a range of optional extras
               are available. The services listed are the minimum included in each package.
