--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
             <li><a class="nav-link scrollto" href="#pricing">Pricing</a></li>
 
             <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-            <li><a class="getstarted scrollto" href="#about">Get Started</a></li>
           </ul>
+
           <i class="bi bi-list mobile-nav-toggle"></i>
         </nav>
         <!-- .navbar -->
@@ -91,11 +91,20 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-6 d-flex flex-column justify-content-center">
-            <h1 data-aos="fade-up">Expert Web Development for Small Businesses</h1>
-            <h2 data-aos="fade-up" data-aos-delay="400">
-              Customized Websites Designed to Grow Your Business and Increase Online Visibility
-            </h2>
+            <h1 data-aos="fade-up">Specialized Web Development Services for Small Businesses</h1>
+            <div data-aos="fade-up" data-aos-delay="600">
+              <div class="text-center text-lg-start">
+                <a
+                  href="#about"
+                  class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center"
+                >
+                  <span>Get Started</span>
+                  <i class="bi bi-arrow-right"></i>
+                </a>
+              </div>
+            </div>
           </div>
+
           <div class="col-lg-6 hero-img" data-aos="zoom-out" data-aos-delay="200">
             <img src="assets/img/hero-img.png" class="img-fluid" alt="" />
           </div>
@@ -117,25 +126,19 @@
               <div class="content">
                 <h1>About Us</h1>
                 <p>
-                  Sysmologic is a website design and development company that specializes in
-                  creating professional and effective websites for small businesses. Our team of
-                  experienced designers and developers work closely with each client to understand
-                  their unique needs and goals, and then use that knowledge to create a website that
-                  not only looks great, but also effectively promotes their products or services.
+                  Sysmologic is a website design and development company that specializes in helping
+                  small businesses establish a professional and effective online presence. We use a
+                  variety of technologies such as HTML for basic projects and the MERN (MongoDB,
+                  Express, React, NodeJS) stack for larger projects to create custom websites. For
+                  clients who prefer, we also offer the option of using Wordpress. Our team of
+                  experts will work with you to tailor the website to your specific needs and ensure
+                  it effectively promotes your products or services.
                 </p>
                 <p>
-                  Whether you're looking for a simple brochure website or a more complex e-commerce
-                  platform, Sysmologic can help bring your business to the next level. Our
-                  affordable pricing and commitment to customer satisfaction make it easy for small
-                  businesses to get the online presence they need to succeed.
-                </p>
-                <p>
-                  With our team of experts, we ensure that each website we create is tailored to the
-                  specific needs of the business it represents. From design to development, our goal
-                  is to create a website that not only looks great but also effectively promotes
-                  your products or services, and helps you grow your business. At Sysmologic, we are
-                  committed to providing the best service possible and making sure that our clients
-                  are completely satisfied with the end result.
+                  Our affordable pricing and commitment to customer satisfaction make it easy for
+                  small businesses to get the online presence they need to grow. At Sysmologic, our
+                  goal is to provide the best service possible and ensure complete satisfaction with
+                  the final product.
                 </p>
               </div>
             </div>
@@ -169,11 +172,13 @@
             <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="400">
               <div class="box">
                 <img src="assets/img/values-2.png" class="img-fluid" alt="" />
-                <h3>No Hidden Cost</h3>
+                <h3>No Hidden Cost and Recurring Cost</h3>
                 <p>
                   What you see is what you pay with us - we don't have any hidden fees or recurring
                   costs for our website services. You'll know exactly how much you're paying
-                  upfront, and there won't be any surprise charges later on.
+                  upfront, and there won't be any surprise charges later on. We also dont charge any
+                  recurring cost once your website is made unlike other website builders where you
+                  have to pay a reuccring cost to acess your own website.
                 </p>
               </div>
             </div>
@@ -222,11 +227,11 @@
                   />
                 </svg>
 
-                <h3>Domain registration and hosting</h3>
+                <h3>Domain Registration and Hosting</h3>
                 <p>
-                  Sysmologic handles domain registration and hosting for all our clients. To get
-                  started, simply provide us with your desired domain name and within a few days
-                  you'll be able to access your new website by entering the URL
+                  Sysmologic handles domain registration for all its clients where we will setup
+                  everything including website URL's and Email services. Domain and hosting costs
+                  start from $35/year.
                 </p>
               </div>
             </div>
@@ -259,10 +264,10 @@
                   />
                 </svg>
 
-                <h3>Responsive and mobile-friendly design</h3>
+                <h3>Responsive and Mobile-friendly Design</h3>
                 <p>
                   Our websites are designed to be cross-platform friendly, ensuring that they will
-                  run properly on a variety of devices including desktop computers, laptops, and
+                  run properly on a variety of devices, including desktop computers, laptops, and
                   mobile phones.
                 </p>
               </div>
@@ -295,11 +300,10 @@
                   </defs>
                 </svg>
 
-                <h3>User experience (UX) and user interface (UI) design</h3>
+                <h3>Marketing your Website</h3>
                 <p>
-                  Our team of dedicated UX/UI designers work to ensure that your website is
-                  user-friendly and easy for all visitors to navigate. With our expertise, you can
-                  expect a smooth and enjoyable experience for all users on your website.
+                  At Sysmologic, we help our clients advertise their new businesses. Allowing users
+                  to quickly receive clients after they have built their website.
                 </p>
               </div>
             </div>
@@ -343,12 +347,13 @@
                   </defs>
                 </svg>
 
-                <h3>Custom website design and development</h3>
+                <h3>Custom Website Design and Development</h3>
                 <p>
-                  In addition to our selection of pre-designed templates, we also offer the option
-                  of custom websites for those who want a more unique and personalized look. If you
-                  don't want to use a template or framework like Bootstrap, our team can work with
-                  you to create a completely custom website from scratch.
+                  In addition to our selection of pre-designed templates for WordPress websites, we
+                  also offer the option of custom websites for those who want a more unique and
+                  personalised look. If you don't want to use a template or framework like
+                  Bootstrap, our team can work with you to create a completely custom website from
+                  scratch.
                 </p>
               </div>
             </div>
@@ -415,25 +420,30 @@
 
             <h5>
               In addition to the core services included in each package, a range of optional extras
-              are available. The services listed are the minimum included in each package.
+              are available. Each package carries all the advantages of the package below it.
             </h5>
           </header>
 
           <div class="row gy-4" data-aos="fade-left">
             <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="100">
               <div class="box">
-                <h3 style="color: #07d5c0">Basic Page Website</h3>
-                <div class="price"><sup>$</sup>100</div>
+                <h3 style="color: #07d5c0">Starter Package</h3>
+                <div class="price"><sup>$</sup>125</div>
 
                 <ul>
                   <li>Single Page Website</li>
                   <!--Changes-->
                   <li>Complete W3C Certified HTML</li>
                   <li>Ready in 48 Hours</li>
-                  <li>Contant/Query Form</li>
 
-                  <li>Get 1 Week of Support</li>
+                  <li>Get 1 week of website support</li>
+                  <li>Cross Platform Compatible</li>
+                  <li>Contant Us Form</li>
+
+                  <li>Database and API Integration($100)</li>
+                  <li>Content Management System ($199)</li>
                 </ul>
+
                 <a href="#contact" class="btn-buy">Buy Now</a>
               </div>
             </div>
@@ -441,15 +451,20 @@
             <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="200">
               <div class="box">
                 <span class="featured">Featured</span>
-                <h3 style="color: #65c600">Modern Website</h3>
+                <h3 style="color: #65c600">Professional Package</h3>
                 <div class="price"><sup>$</sup>300</div>
 
                 <ul>
                   <li>Upto 20 web pages</li>
                   <li>Basic SEO</li>
                   <li>Google Analytics integration</li>
-                  <li>Free database and API integration</li>
-                  <li>Get 2 weeks of support</li>
+
+                  <li>Get 2 weeks of website support</li>
+
+                  <li>Cross Platform Compatible</li>
+                  <li>Online Payment Integration</li>
+                  <li>Database and API Integration($50)</li>
+                  <li>Content Management System ($149)</li>
                 </ul>
                 <a href="#contact" class="btn-buy">Buy Now</a>
               </div>
@@ -457,18 +472,20 @@
 
             <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="300">
               <div class="box">
-                <h3 style="color: #ff901c">Business Plan</h3>
-                <div class="price"><sup>$</sup>500</div>
+                <h3 style="color: #ff901c">Business Package</h3>
+                <div class="price"><sup>$</sup>700</div>
 
                 <ul>
-                  <li>Unlimited Pages</li>
+                  <li>E-commerce website development</li>
                   <li>Enhanced SEO</li>
 
-                  <li>
-                    E-commerce website development (e.g. product catalog, shopping cart, payment
-                    gateway integration)
-                  </li>
-                  <li>Free 3 weeks of website support</li>
+                  <li>Google Friendly Sitemap</li>
+                  <li>Get 3 weeks of website support</li>
+                  <li>Cross Platform and Browser Compatible</li>
+                  <li>Online Payment Integration</li>
+
+                  <li>Database and API Integration</li>
+                  <li>Content Management System ($99)</li>
                 </ul>
                 <a href="#contact" class="btn-buy">Buy Now</a>
               </div>
@@ -476,14 +493,20 @@
 
             <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="400">
               <div class="box">
-                <h3 style="color: #ff0071">Maintaince Plan</h3>
-                <div class="price"><sup>$</sup>25-75<span> / mo</span></div>
+                <h3 style="color: #ff0071">Enterprise Package</h3>
+                <div class="price"><sup>$</sup>1100</div>
 
                 <ul>
-                  <li>Content updates and management</li>
-                  <li>Periodically updating Plugins and softwares to reduce security risk</li>
-                  <li>Technical support and troubleshooting as needed</li>
-                  <li>Periodic backups to protect against data loss(Only Databases)</li>
+                  <li>E-commerce website development</li>
+                  <li>Enhanced SEO</li>
+                  <li>Google Friendly Sitemap</li>
+                  <li>Get 4 weeks of website support</li>
+                  <li>Cross Platform and Browser Compatible</li>
+                  <li>Online Payment Integration</li>
+
+                  <li>Online Appointments Tool</li>
+                  <li>Database and API Integration</li>
+                  <li>Content Management System ($99)</li>
                 </ul>
                 <a href="#contact" class="btn-buy">Buy Now</a>
               </div>
