--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
       rel="stylesheet"
     />
 
+    <meta
+      name="trustpilot-one-time-domain-verification-id"
+      content="50dd7b6a-26e9-4e08-bd7d-fa25edbbd611"
+    />
+
     <!-- Vendor CSS Files -->
     <link href="assets/vendor/aos/aos.css" rel="stylesheet" />
     <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
@@ -91,8 +96,8 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-6 d-flex flex-column justify-content-center">
-            <h1 data-aos="fade-up">Specialized Web Development Services for Small Businesses</h1>
-            <div data-aos="fade-up" data-aos-delay="600">
+            <h1 data-aos="">Specialized Web Development Services for Small Businesses</h1>
+            <div data-aos="" data-aos-delay="600">
               <div class="text-center text-lg-start">
                 <a
                   href="#about"
@@ -116,12 +121,12 @@
     <main id="main">
       <!-- ======= About Section ======= -->
       <section id="about" class="about">
-        <div class="container" data-aos="fade-up">
+        <div class="container" data-aos="">
           <div class="row gx-0">
             <div
               class="col-lg-12 d-flex flex-column justify-content-center"
-              data-aos="fade-up"
-              data-aos-delay="200"
+              data-aos=""
+              data-aos-delay=""
             >
               <div class="content">
                 <h1>About Us</h1>
@@ -149,13 +154,13 @@
 
       <!-- ======= Values Section ======= -->
       <section id="values" class="values">
-        <div class="container" data-aos="fade-up">
+        <div class="container" data-aos="">
           <header class="section-header">
             <p>Why Us</p>
           </header>
 
           <div class="row">
-            <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
+            <div class="col-lg-4" data-aos="" data-aos-delay="">
               <div class="box">
                 <img src="assets/img/values-1.png" class="img-fluid" alt="" />
                 <h3>Simple and Straight Forward</h3>
@@ -169,7 +174,7 @@
               </div>
             </div>
 
-            <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="400">
+            <div class="col-lg-4 mt-4 mt-lg-0" data-aos="" data-aos-delay="">
               <div class="box">
                 <img src="assets/img/values-2.png" class="img-fluid" alt="" />
                 <h3>No Hidden Cost and Recurring Cost</h3>
