--- a/contact-us.html
+++ b/contact-us.html
@@ -157,7 +157,7 @@
                             <h1>Get In Touch</h1>
                             <nav aria-label="breadcrumb">
                                 <ol class="breadcrumb">
-                                    <li><a href="index-3.html"><i class="fas fa-home"></i> Home</a></li>
+                                    <li><a href="https://sysmologic.com/"><i class="fas fa-home"></i> Home</a></li>
                                     <li class="active">Contact</li>
                                 </ol>
                             </nav>
