--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
                 <div class="menu-left d-flex align-items-center">
                     <!-- Start Header Navigation -->
                     <div class="navbar-header">
-                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu" style="opacity: 0;">
                             <i class="fa fa-bars"></i>
                         </button>
-                        <a class="navbar-brand" href="index-3.html">
+                        <a class="navbar-brand" href="https://sysmologic.com/">
                             <h1 class="sysmologic-headingone">Sysmologic</h1>
                         </a>
                     </div>
@@ -122,7 +122,7 @@
                             <div class="content">
                                 <div class="info">
                                     <h2 class="split-text">Business</h2>
-                                    <h2 class="split-text">Solved <strong>Solved</strong></h2>
+                                    <h2 class="split-text">Solutions <strong>Solutions</strong></h2>
                                 </div>
                                 <div class="main-content">
                                     <p>
