--- a/contact-us.html
+++ b/contact-us.html
@@ -65,7 +65,7 @@
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
                             <i class="fa fa-bars"></i>
                         </button>
-                        <a class="navbar-brand" href="index-3.html">
+                        <a class="navbar-brand" href="https://sysmologic.com/">
                             <h1 class="sysmologic-headingone">Sysmologic</h1>
                         </a>
                     </div>
