--- a/404.html
+++ b/404.html
@@ -5,7 +5,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Sysmologic - Digital Solutions">
+<meta name="description" content="Sysmologic provides modern web development, digital solutions, and scalable software for businesses worldwide.">
+<meta property="og:title" content="Sysmologic - Digital Solutions" />
+<meta property="og:description" content="Modern web development, digital solutions, and scalable software for growing businesses." />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://sysmologic.com/" />
+<meta property="og:image" content="https://sysmologic.com/assets/img/sysmologic-logo.png" />
+
 
     <!-- ========== Page Title ========== -->
     <title>Sysmologic - Digital Solutions</title>
