--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
                             </div>
                             <div class="col-lg-5">
                                 <div class="date">2026</div>
-                                <h2><a href="https://ameen-porfolio.netlify.app/">Personal Portfolio</a></h2>
+                                <h2><a href="https://ameen-sattar-portfolio.netlify.app/">Personal Portfolio</a></h2>
                                 <p>A personal portfolio made to impress future employers</p>
                                 
                             </div>
