decrased scope and add more contact

--- a/contact-us.html
+++ b/contact-us.html
@@ -116,12 +116,16 @@
                                                 <strong>fasihislam1999@gmail.com</strong>
                                             </div>
                                         </li>
-                                        <li>
-                                            <div class="content">
-                                                <p>Contact</p> 
-                                                <strong>+14168235930</strong>
-                                            </div>
-                                        </li>
+<li>
+    <div class="content">
+        <p>Contact</p>
+        <strong>
+            <a href="https://wa.me/14168235930" target="_blank" rel="noopener">
+                +1 416 823 5930
+            </a>
+        </strong>
+    </div>
+</li>
                                     </ul>
                                 </div>
                             </div>
@@ -303,15 +307,9 @@
                                 </div>
                                 <ul class="address-list">
                                     <li>
-                                        <h4>Australia</h4>
+                                        <h4>Canada</h4>
                                         <p>
-                                            Travel World House, Level 7, 17 Jones St, NSW, 2060
-                                        </p>
-                                    </li>
-                                    <li>
-                                        <h4>Dubai</h4>
-                                        <p>
-                                            Sheikh Mohammed bin salah, #234 B - Downtown - Dubai
+                                            65 Times Avenue, Toronto, ON L3T 7X9
                                         </p>
                                     </li>
                                 </ul>
