added phone numbers

--- a/contact-us.html
+++ b/contact-us.html
@@ -120,9 +120,14 @@
     <div class="content">
         <p>Contact</p>
         <strong>
-            <a href="https://wa.me/14168235930" target="_blank" rel="noopener">
-                +1 416 823 5930
+            Call & Text
+            <a href="https://wa.me/12264991734" target="_blank" rel="noopener">
+                +12264991734
             </a>
+            WhatsApp:
+            <a href="https://wa.me/14168235930" target="_blank" rel="noopener">
+                +14168235930
+                </a>
         </strong>
     </div>
 </li>
@@ -189,8 +194,11 @@
                             <div class="contact-style-one-info">
                                 <ul class="contact-address">
                                     <li>
-                                        <a class="phone-link" href="tel:+14168235930"><i class="fas fa-user-headset"></i> +14168235930</a>
-                                    </li>
+                                        Call & Text:<br>
+                                        <a class="phone-link" href="tel:+14168235930"><i class="fas fa-user-headset"></i> +12264991734</a><br>
+
+                                        WhatsApp:<br>
+                                        <a class="phone-link" href="https://wa.me/14168235930"><i class="fas fa-user-headset"></i> +14168235930</a>
                                     <li>
                                         <div class="info">
                                             <h4>Location</h4>
