--- a/contact-us.html
+++ b/contact-us.html
@@ -121,7 +121,7 @@
         <p>Contact</p>
         <strong>
             Call & Text
-            <a href="https://wa.me/12264991734" target="_blank" rel="noopener">
+            <a href="tel:+12264991734" target="_blank" rel="noopener">
                 +12264991734
             </a>
             WhatsApp:
@@ -195,7 +195,7 @@
                                 <ul class="contact-address">
                                     <li>
                                         Call & Text:<br>
-                                        <a class="phone-link" href="tel:+14168235930"><i class="fas fa-user-headset"></i> +12264991734</a><br>
+                                        <a class="phone-link" href="tel:+12264991734"><i class="fas fa-user-headset"></i> +12264991734</a><br>
 
                                         WhatsApp:<br>
                                         <a class="phone-link" href="https://wa.me/14168235930"><i class="fas fa-user-headset"></i> +14168235930</a>
